src/main/antlr4/fr/ensimag/deca/syntax/.antlr/DecaParser.java
// Generated from /user/9/soriarag/Projet_GL/src/main/antlr4/fr/ensimag/deca/syntax/DecaParser.g4 by ANTLR 4.9.2

    import fr.ensimag.deca.tree.*;
    import java.io.PrintStream;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DecaParser extends AbstractDecaParser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PRINTLN=1, PRINT=2, LETTER=3, DIGIT=4, EOL=5, IDENT=6, POSITIVE_DIGIT=7, 
		INT=8, OPARENT=9, CPARENT=10, OBRACE=11, CBRACE=12, SEMI=13, STRING=14, 
		MULTI_LINE_STRING=15, COMMENT=16, MULTI_LINE_COMMENT=17, DUMMY_TOKEN=18, 
		COMMA=19, EQUALS=20, PRINTX=21, PRINTLNX=22, WHILE=23, RETURN=24, IF=25, 
		ELSE=26, FLOAT=27, OR=28, AND=29, EQEQ=30, NEQ=31, LEQ=32, GEQ=33, GT=34, 
		LT=35, INSTANCEOF=36, PLUS=37, MINUS=38, TIMES=39, SLASH=40, PERCENT=41, 
		EXCLAM=42, DOT=43, READINT=44, READFLOAT=45, NEW=46, TRUE=47, FALSE=48, 
		THIS=49, NULL=50, CLASS=51, EXTENDS=52, PROTECTED=53, ASM=54;
	public static final int
		RULE_prog = 0, RULE_main = 1, RULE_block = 2, RULE_list_decl = 3, RULE_decl_var_set = 4, 
		RULE_list_decl_var = 5, RULE_decl_var = 6, RULE_list_inst = 7, RULE_inst = 8, 
		RULE_if_then_else = 9, RULE_list_expr = 10, RULE_expr = 11, RULE_assign_expr = 12, 
		RULE_or_expr = 13, RULE_and_expr = 14, RULE_eq_neq_expr = 15, RULE_inequality_expr = 16, 
		RULE_sum_expr = 17, RULE_mult_expr = 18, RULE_unary_expr = 19, RULE_select_expr = 20, 
		RULE_primary_expr = 21, RULE_type = 22, RULE_literal = 23, RULE_ident = 24, 
		RULE_list_classes = 25, RULE_class_decl = 26, RULE_class_extension = 27, 
		RULE_class_body = 28, RULE_decl_field_set = 29, RULE_visibility = 30, 
		RULE_list_decl_field = 31, RULE_decl_field = 32, RULE_decl_method = 33, 
		RULE_list_params = 34, RULE_multi_line_string = 35, RULE_param = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "main", "block", "list_decl", "decl_var_set", "list_decl_var", 
			"decl_var", "list_inst", "inst", "if_then_else", "list_expr", "expr", 
			"assign_expr", "or_expr", "and_expr", "eq_neq_expr", "inequality_expr", 
			"sum_expr", "mult_expr", "unary_expr", "select_expr", "primary_expr", 
			"type", "literal", "ident", "list_classes", "class_decl", "class_extension", 
			"class_body", "decl_field_set", "visibility", "list_decl_field", "decl_field", 
			"decl_method", "list_params", "multi_line_string", "param"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'println'", "'print'", null, null, "'\n'", null, null, null, "'('", 
			"')'", "'{'", "'}'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PRINTLN", "PRINT", "LETTER", "DIGIT", "EOL", "IDENT", "POSITIVE_DIGIT", 
			"INT", "OPARENT", "CPARENT", "OBRACE", "CBRACE", "SEMI", "STRING", "MULTI_LINE_STRING", 
			"COMMENT", "MULTI_LINE_COMMENT", "DUMMY_TOKEN", "COMMA", "EQUALS", "PRINTX", 
			"PRINTLNX", "WHILE", "RETURN", "IF", "ELSE", "FLOAT", "OR", "AND", "EQEQ", 
			"NEQ", "LEQ", "GEQ", "GT", "LT", "INSTANCEOF", "PLUS", "MINUS", "TIMES", 
			"SLASH", "PERCENT", "EXCLAM", "DOT", "READINT", "READFLOAT", "NEW", "TRUE", 
			"FALSE", "THIS", "NULL", "CLASS", "EXTENDS", "PROTECTED", "ASM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DecaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    @Override
	    protected AbstractProgram parseProgram() {
	        return prog().tree;
	    }

	public DecaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public AbstractProgram tree;
		public List_classesContext list_classes;
		public MainContext main;
		public List_classesContext list_classes() {
			return getRuleContext(List_classesContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DecaParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			((ProgContext)_localctx).list_classes = list_classes();
			setState(75);
			((ProgContext)_localctx).main = main();
			setState(76);
			match(EOF);

			            assert(((ProgContext)_localctx).list_classes.tree != null);
			            assert(((ProgContext)_localctx).main.tree != null);
			            ((ProgContext)_localctx).tree =  new Program(((ProgContext)_localctx).list_classes.tree, ((ProgContext)_localctx).main.tree);
			            setLocation(_localctx.tree, (((ProgContext)_localctx).list_classes!=null?(((ProgContext)_localctx).list_classes.start):null));
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public AbstractMain tree;
		public BlockContext block;
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{

				            ((MainContext)_localctx).tree =  new EmptyMain();
				        
				}
				break;
			case OBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				((MainContext)_localctx).block = block();

				            assert(((MainContext)_localctx).block.decls != null);
				            assert(((MainContext)_localctx).block.insts != null);
				            ((MainContext)_localctx).tree =  new Main(((MainContext)_localctx).block.decls, ((MainContext)_localctx).block.insts);
				            setLocation(_localctx.tree, (((MainContext)_localctx).block!=null?(((MainContext)_localctx).block.start):null));
				        
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public ListDeclVar decls;
		public ListInst insts;
		public List_declContext list_decl;
		public List_instContext list_inst;
		public TerminalNode OBRACE() { return getToken(DecaParser.OBRACE, 0); }
		public List_declContext list_decl() {
			return getRuleContext(List_declContext.class,0);
		}
		public List_instContext list_inst() {
			return getRuleContext(List_instContext.class,0);
		}
		public TerminalNode CBRACE() { return getToken(DecaParser.CBRACE, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(OBRACE);
			setState(86);
			((BlockContext)_localctx).list_decl = list_decl();
			setState(87);
			((BlockContext)_localctx).list_inst = list_inst();
			setState(88);
			match(CBRACE);

			            assert(((BlockContext)_localctx).list_decl.tree != null);
			            assert(((BlockContext)_localctx).list_inst.tree != null);
			            ((BlockContext)_localctx).decls =  ((BlockContext)_localctx).list_decl.tree;
			            ((BlockContext)_localctx).insts =  ((BlockContext)_localctx).list_inst.tree;
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_declContext extends ParserRuleContext {
		public ListDeclVar tree;
		public List<Decl_var_setContext> decl_var_set() {
			return getRuleContexts(Decl_var_setContext.class);
		}
		public Decl_var_setContext decl_var_set(int i) {
			return getRuleContext(Decl_var_setContext.class,i);
		}
		public List_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_decl; }
	}

	public final List_declContext list_decl() throws RecognitionException {
		List_declContext _localctx = new List_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_list_decl);

		            ((List_declContext)_localctx).tree =  new ListDeclVar();
		        
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(91);
					decl_var_set(_localctx.tree);
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_var_setContext extends ParserRuleContext {
		public ListDeclVar l;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List_decl_varContext list_decl_var() {
			return getRuleContext(List_decl_varContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(DecaParser.SEMI, 0); }
		public Decl_var_setContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Decl_var_setContext(ParserRuleContext parent, int invokingState, ListDeclVar l) {
			super(parent, invokingState);
			this.l = l;
		}
		@Override public int getRuleIndex() { return RULE_decl_var_set; }
	}

	public final Decl_var_setContext decl_var_set(ListDeclVar l) throws RecognitionException {
		Decl_var_setContext _localctx = new Decl_var_setContext(_ctx, getState(), l);
		enterRule(_localctx, 8, RULE_decl_var_set);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			((Decl_var_setContext)_localctx).type = type();
			setState(98);
			list_decl_var(_localctx.l,((Decl_var_setContext)_localctx).type.tree);
			setState(99);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_decl_varContext extends ParserRuleContext {
		public ListDeclVar l;
		public AbstractIdentifier t;
		public Decl_varContext dv1;
		public Decl_varContext dv2;
		public List<Decl_varContext> decl_var() {
			return getRuleContexts(Decl_varContext.class);
		}
		public Decl_varContext decl_var(int i) {
			return getRuleContext(Decl_varContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DecaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DecaParser.COMMA, i);
		}
		public List_decl_varContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public List_decl_varContext(ParserRuleContext parent, int invokingState, ListDeclVar l, AbstractIdentifier t) {
			super(parent, invokingState);
			this.l = l;
			this.t = t;
		}
		@Override public int getRuleIndex() { return RULE_list_decl_var; }
	}

	public final List_decl_varContext list_decl_var(ListDeclVar l,AbstractIdentifier t) throws RecognitionException {
		List_decl_varContext _localctx = new List_decl_varContext(_ctx, getState(), l, t);
		enterRule(_localctx, 10, RULE_list_decl_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((List_decl_varContext)_localctx).dv1 = decl_var(_localctx.t);

			        _localctx.l.add(((List_decl_varContext)_localctx).dv1.tree);
			        
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(103);
				match(COMMA);
				setState(104);
				((List_decl_varContext)_localctx).dv2 = decl_var(_localctx.t);

				        
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_varContext extends ParserRuleContext {
		public AbstractIdentifier t;
		public AbstractDeclVar tree;
		public IdentContext i;
		public ExprContext e;
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(DecaParser.EQUALS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Decl_varContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Decl_varContext(ParserRuleContext parent, int invokingState, AbstractIdentifier t) {
			super(parent, invokingState);
			this.t = t;
		}
		@Override public int getRuleIndex() { return RULE_decl_var; }
	}

	public final Decl_varContext decl_var(AbstractIdentifier t) throws RecognitionException {
		Decl_varContext _localctx = new Decl_varContext(_ctx, getState(), t);
		enterRule(_localctx, 12, RULE_decl_var);

		        
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			((Decl_varContext)_localctx).i = ident();

			        
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(114);
				match(EQUALS);
				setState(115);
				((Decl_varContext)_localctx).e = expr();

				        
				}
			}


			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_instContext extends ParserRuleContext {
		public ListInst tree;
		public InstContext i;
		public List<InstContext> inst() {
			return getRuleContexts(InstContext.class);
		}
		public InstContext inst(int i) {
			return getRuleContext(InstContext.class,i);
		}
		public List_instContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_inst; }
	}

	public final List_instContext list_inst() throws RecognitionException {
		List_instContext _localctx = new List_instContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_list_inst);

		    ((List_instContext)_localctx).tree =  new ListInst();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINTLN) | (1L << PRINT) | (1L << IDENT) | (1L << INT) | (1L << SEMI) | (1L << STRING) | (1L << PRINTX) | (1L << PRINTLNX) | (1L << WHILE) | (1L << RETURN) | (1L << IF) | (1L << FLOAT))) != 0)) {
				{
				{
				setState(122);
				((List_instContext)_localctx).i = inst();

				       _localctx.tree.add(((List_instContext)_localctx).i.tree);
				        
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstContext extends ParserRuleContext {
		public AbstractInst tree;
		public ExprContext e1;
		public List_exprContext list_expr;
		public If_then_elseContext if_then_else;
		public ExprContext condition;
		public List_instContext body;
		public ExprContext expr;
		public TerminalNode SEMI() { return getToken(DecaParser.SEMI, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PRINT() { return getToken(DecaParser.PRINT, 0); }
		public TerminalNode OPARENT() { return getToken(DecaParser.OPARENT, 0); }
		public List_exprContext list_expr() {
			return getRuleContext(List_exprContext.class,0);
		}
		public TerminalNode CPARENT() { return getToken(DecaParser.CPARENT, 0); }
		public TerminalNode PRINTLN() { return getToken(DecaParser.PRINTLN, 0); }
		public TerminalNode PRINTX() { return getToken(DecaParser.PRINTX, 0); }
		public TerminalNode PRINTLNX() { return getToken(DecaParser.PRINTLNX, 0); }
		public If_then_elseContext if_then_else() {
			return getRuleContext(If_then_elseContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(DecaParser.WHILE, 0); }
		public TerminalNode OBRACE() { return getToken(DecaParser.OBRACE, 0); }
		public TerminalNode CBRACE() { return getToken(DecaParser.CBRACE, 0); }
		public List_instContext list_inst() {
			return getRuleContext(List_instContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(DecaParser.RETURN, 0); }
		public InstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst; }
	}

	public final InstContext inst() throws RecognitionException {
		InstContext _localctx = new InstContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_inst);
		try {
			setState(181);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENT:
			case INT:
			case STRING:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				((InstContext)_localctx).e1 = expr();
				setState(131);
				match(SEMI);

				            assert(((InstContext)_localctx).e1.tree != null);
				        
				}
				break;
			case SEMI:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(SEMI);

				            ((InstContext)_localctx).tree =  new NoOperation();
				        
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				match(PRINT);
				setState(137);
				match(OPARENT);
				setState(138);
				((InstContext)_localctx).list_expr = list_expr();
				setState(139);
				match(CPARENT);
				setState(140);
				match(SEMI);

				            assert(((InstContext)_localctx).list_expr.tree != null);
				        
				}
				break;
			case PRINTLN:
				enterOuterAlt(_localctx, 4);
				{
				setState(143);
				match(PRINTLN);
				setState(144);
				match(OPARENT);
				setState(145);
				((InstContext)_localctx).list_expr = list_expr();
				setState(146);
				match(CPARENT);
				setState(147);
				match(SEMI);
